<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">H+</string>
    <string name="app_folder_name" translatable="false">HariHaraMedicals</string>
    <string name="title_home">Home</string>
    <string name="title_calender">Calender</string>
    <string name="title_book_Dr">Book Doctor</string>
    <string name="title_medicien">Product</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="title_appointment">My Appointment</string>
    <string name="title_order">My Order</string>
    <string name="title_remainder">Remainder</string>
    <string name="title_medical_records">My Records</string>
    <string name="title_log_out">Logout</string>
    <string name="title_medicine">Medicine</string>
    <string name="title_user">User</string>
    <string name="title_language">My Language</string>
    <string name="title_English">English</string>
    <string name="title_Kannada">ಕನ್ನಡ</string>
    <string name="title_About">About Harihara Medicals</string>
    <string name="title_Feedback">Feedback</string>
    <string name="search_doctors">Search for Doctor, Specialist</string>
    <string name="title_search_doctors">Search Doctors</string>
    <string name="title_description">Search by directly typing the doctor name, specialty, etc. You can also search by health concerns listed below</string>
    <string name="title_your_health">Your Health</string>
    <string name="title_bmi">BMI</string>
    <string name="title_blood">Blood Pressure</string>
    <string name="title_sugar">Sugar Level</string>
    <string name="title_live_char">Live Chat</string>
    <string name="title_general_doctor">General Doctor</string>
    <string name="title_skin">Skin/Hair</string>
    <string name="title_child">Child Care</string>
    <string name="title_women">Women Health</string>
    <string name="title_homeopathy">Homeopathy</string>
    <string name="title_ayurveda">Ayurveda</string>
    <string name="title_search_medicine">Search  Medicine/ Health Care</string>
    <string name="title_medicine_des">Search the medicine that you want from the list of thousands of medicines available in Harihara Medicals</string>
    <string name="title_health">Health/Wealth</string>
    <string name="title_cosmetics">Cosmetics</string>
    <string name="title_surgical">Surgical Item</string>
    <string name="title_veterinary">Veterinary</string>
    <string name="title_invite">Invite</string>
    <string name="title_visit">Did You Visit Doctor?</string>
    <string name="title_my_order">List of My orders</string>
    <string name="title_orders">Orders</string>
    <string name="title_order_ready">Order Ready</string>
    <string name="title_order_complete">Order Complete</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>